--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -1,5 +1,6 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/add_income.png"> ADD INCOME</h2>
+  <h3 style="text-align:center;"><img src="images/add_income.png" width="90px"> ADD INCOME</h3>
+  <br/>
 
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
