--- a/app/views/modal/edit-income-popup.html
+++ b/app/views/modal/edit-income-popup.html
@@ -1,5 +1,7 @@
 <div class="source-list-modal" style="height:100%;background-color:#eaeae1;">
-  <h2 style="text-align:center;"><img src="images/add_income.png"> EDIT INCOME</h2>
+  <br/>
+  <h3 style="text-align:center;"><img src="images/add_income.png" width="90px"> EDIT INCOME</h3>
+  <br/>
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Name:</label>
