--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -2,7 +2,8 @@
   There was a problem logging in. Please try again.
 </div>
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/login.png"> LOGIN FORM</h2>
+  <h3 style="text-align:center;"><img src="images/login.png" width="90px"> LOGIN FORM</h3>
+  <br/>
   <form class="form-horizontal" role="form" ng-submit="controller.login()" ng-show="controller.loading == false">
     <div class="form-group">
       <label class="control-label col-sm-3" for="login_username">Username:</label>
