--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -1,5 +1,6 @@
 <div class="container sign-up-container">
-  <h2 style="text-align:center;"><img src="images/sign-up.png"> SIGN UP FORM</h2>
+  <h3 style="text-align:center;"><img src="images/sign-up.png" width="90px"> SIGN UP FORM</h3>
+  <br/>
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-3" for="email">Email<span style="color:#ff3333;">*</span> :</label>
