--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-  <h2>
-    {{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">The Accountant</span><span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!
-  </h2>
+  <h3>
+    {{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <b>The Accountant</b><span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!
+  </h3>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
@@ -9,45 +9,83 @@
     <p ng-if="!isEng()">Mereu o placere in oferirea celei mai placute si usor de folosit aplicatii de management financiar.</p>
   </p>
   <br><br>
-  <h3 style="font-weight: bold;">What <span style="font-style: italic;">The Accountant</span> does ?</h3>
+  <h3 style="font-weight: bold;">What <b>The Accountant</b> does ?</h3>
   <div>
-    <ul style="text-align:left;font-size:18px;">
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you to keep your budget under control.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> can calculate how much you've spent monthly,
+    <ul style="text-align:left;font-size:16px;">
+      <li><b>The Accountant</b> helps you to keep your budget under control.</li>
+      <li><b>The Accountant</b> can calculate how much you've spent monthly,
         grouping your expenses by categories or by date.</li>
       <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you establish monthly thresholds for expenses
         grouped by different categories.</li>-->
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> is free and easy to use.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> offers the possibility to manage your expenses by
+      <li><b>The Accountant</b> is free and easy to use.</li>
+      <li><b>The Accountant</b> offers the possibility to manage your expenses by
         creating an account that can be used to login into the application everywhere you are, without installing any other
         application.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> offers a secure connection based on HTTPS protocol.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> encrypts any information for a user, and only the
+      <li><b>The Accountant</b> offers a secure connection based on HTTPS protocol.</li>
+      <li><b>The Accountant</b> encrypts any information for a user, and only the
         user that have created the information has acces to it.</li>
     </ul>
 
     <ul ng-if="!isEng()" style="text-align:left;font-size:18px;">
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te ajuta sa tii bugetul personal sub control.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> poate calcula cat ai cheltuit lunar,
+      <li><b>The Accountant</b> te ajuta sa tii bugetul personal sub control.</li>
+      <li><b>The Accountant</b> poate calcula cat ai cheltuit lunar,
         grupand cheltuielile in functie de categorie sau de data.</li>
       <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te poate ajuta sa iti stabilesti limite lunare pentru
         cheltuielile grupate pe categorii diferite.</li>-->
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> este gratuit si usor de folosit.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> ofera posibilitatea managementului chaltuielilor
+      <li><b>The Accountant</b> este gratuit si usor de folosit.</li>
+      <li><b>The Accountant</b> ofera posibilitatea managementului chaltuielilor
         prin crearea unui cont care poate fi folosit pentru logarea in aplicatie de oriunde ,
         fara necesitatea instalarii unei alte aplicatii.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
-      <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> cripteaza toate informatiile introduse de utlizator, si doar
+      <li><b>The Accountant</b> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
+      <li><b>The Accountant</b> cripteaza toate informatiile introduse de utlizator, si doar
         utilizatorul care a introdus informatia va avea acces.</li>
     </ul>
   </div>
   <br>
-  <p><a class="btn btn-lg btn-success" ng-init="shouldShowGraphicPreview = true"
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <!--<li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>-->
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/preview_graphics.PNG" alt="Chania">
+      </div>
+
+      <div class="item">
+        <img src="images/preview_statistics.PNG" alt="Chania">
+      </div>
+
+      <!--<div class="item">
+        <img src="img_flower.jpg" alt="Flower">
+      </div>
+
+      <div class="item">
+        <img src="img_flower2.jpg" alt="Flower">
+      </div>-->
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!--<p><a class="btn btn-lg btn-success" ng-init="shouldShowGraphicPreview = true"
         ng-click="shouldShowGraphicPreview = !shouldShowGraphicPreview">Control expenses!<span class="glyphicon glyphicon-ok"></span></a>
   </p>
   <br>
   <img ng-if="shouldShowGraphicPreview" src="images/preview_graphics.PNG" style="width:100%" alt="I'm Yeoman">
-  <img ng-if="!shouldShowGraphicPreview" src="images/preview_statistics.PNG" style="width:100%" alt="I'm Yeoman">
+  <img ng-if="!shouldShowGraphicPreview" src="images/preview_statistics.PNG" style="width:100%" alt="I'm Yeoman">-->
   <br>
   </div>
 </div>
