--- a/app/views/modal/edit-expense-popup.html
+++ b/app/views/modal/edit-expense-popup.html
@@ -1,5 +1,7 @@
 <div class="source-list-modal" style="height:100%;background-color:#eaeae1;">
-  <h2 style="text-align:center;"><img src="images/add_expense.png"> EDIT EXPENSE</h2>
+  <br/>
+  <h3 style="text-align:center;"><img src="images/add_expense.png" width="90px"> EDIT EXPENSE</h3>
+  <br/>
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false" ng-show="loading == false">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Name:</label>
@@ -18,7 +20,9 @@
         <input type="text" class="form-control" placeholder="New category" ng-model="newCategory">
       </div>
       <div class="col-sm-2">
-        <input type="button" class="form-control" placeholder="Add new category" value="Add" ng-click="addCategory()">
+        <button type="button" class="btn btn-default" style="width: 100%;" ng-click="addCategory()" title="Add new category">
+          <span class="glyphicon glyphicon-plus"></span> Add
+        </button>
       </div>
     </div>
     <div class="form-group">
