--- a/app/views/income/incomes_chart.html
+++ b/app/views/income/incomes_chart.html
@@ -17,14 +17,32 @@
 <div id="graphic_container">
   <div ng-show="loading == false">
     <div id="selection_area" class="form-group">
-      <label class="col-sm-4">
-        <span class="input-label">From: </span>
-        <input type="date" ng-model="incomeFromDate" ng-change="onDateSelect()">
+      <label class="col-sm-1 date-label">
+        From:
       </label>
-      <label class="col-sm-4">
-        <span class="input-label">Until: </span>
-        <input type="date" ng-model="incomeUntilDate" ng-change="onDateSelect()">
+      <div class="col-md-3">
+        <p class="input-group">
+          <input type="text" id="date1" class="form-control" uib-datepicker-popup="{{format}}"
+                 ng-model="incomeFromDate" ng-change="onDateSelect()" is-open="datePopup1.opened" datepicker-options="dateOptions"
+                 ng-required="true" close-text="Close" alt-input-formats="altInputFormats"/>
+          <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="openDatePicker1()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
+      </div>
+      <label class="col-sm-1 date-label">
+        Until:
       </label>
+      <div class="col-md-3">
+        <p class="input-group">
+          <input type="text" id="date2" class="form-control" uib-datepicker-popup="{{format}}"
+                 ng-model="incomeUntilDate" ng-change="onDateSelect()" is-open="datePopup2.opened" datepicker-options="dateOptions"
+                 ng-required="true" close-text="Close" alt-input-formats="altInputFormats"/>
+          <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="openDatePicker2()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
+      </div>
       <div class="col-sm-1">
         <span class="glyphicon glyphicon-info-sign" bs-tooltip title="Incomes are presented in your default currency: {{default_currency}}"></span>
       </div>
