--- a/app/views/modal/edit-expense-popup.html
+++ b/app/views/modal/edit-expense-popup.html
@@ -44,10 +44,15 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Creation date:</label>
-      <div class="col-sm-4">
-        <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
-               ng-model="expense.creationDate" required >
+      <label class="control-label col-sm-2" for="date1">Creation date:</label>
+      <div class="col-md-4">
+        <p class="input-group">
+          <input type="text" id="date1" class="form-control" uib-datepicker-popup="{{format}}"
+                 ng-model="expense.creationDate" is-open="datePopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openDatePicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
       </div>
       <label class="control-label col-sm-2" for="amount">Frequency:</label>
       <div class="col-sm-3">
