--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -51,7 +51,13 @@
     <div class="form-group">
       <label class="control-label col-sm-3" for="birthdate">Birthdate:</label>
       <div class="col-sm-9">
-        <input type="date" class="form-control" id="birthdate" placeholder="Birthdate" ng-model="user.birthdate" >
+        <p class="input-group">
+          <input type="text" id="birthdate" class="form-control" uib-datepicker-popup="{{format}}" placeholder="Birthdate"
+                 ng-model="user.birthdate" is-open="datePopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openDatePicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
       </div>
     </div>
     <div class="form-group">
