--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -53,7 +53,7 @@
       <div class="col-sm-9">
         <p class="input-group">
           <input type="text" id="birthdate" class="form-control" uib-datepicker-popup="{{format}}" placeholder="Birthdate"
-                 ng-model="user.birthdate" is-open="datePopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                 ng-model="user.birthdate" is-open="datePopup.opened" datepicker-options="dateOptions" close-text="Close" alt-input-formats="altInputFormats" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="openDatePicker()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
