--- a/app/views/income/incomes_history.html
+++ b/app/views/income/incomes_history.html
@@ -50,6 +50,10 @@
       <th>Currency
         <span class="glyphicon glyphicon-sort header-icon control-icon-blue" bs-tooltip title="Sort by currency" ng-click="changeSortingCriteria('currency')"></span>
       </th>
+      <th>
+        <span title="Default currency amount">D.C. amount</span>
+        <span class="glyphicon glyphicon-sort header-icon control-icon-blue" bs-tooltip title="Sort by default currency amound" ng-click="changeSortingCriteria('defaultCurrencyAmount')"></span>
+      </th>
       <th>Date
         <span class="glyphicon glyphicon-sort header-icon control-icon-blue" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
       </th>
@@ -61,6 +65,7 @@
       <td>{{ income.name }}</td>
       <td>{{ income.amount }}</td>
       <td>{{ income.currency }}</td>
+      <td>{{ income.defaultCurrencyAmount ? income.defaultCurrencyAmount.toFixed(2) : null }}</td>
       <td>{{ income.creationDate | date:'mediumDate' }}</td>
       <td>
         <span class="glyphicon glyphicon-pencil control-icon-green" bs-tooltip title="Edit income!" ng-click="editIncome(income)"></span>
