--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,89 +3,85 @@
     {{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <b>The Accountant</b><span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!
   </h3>
   <p class="lead">
-    <img src="images/logo.svg" alt="I'm Yeoman"><br>
+    <img src="images/logo.svg" width="100px" alt="Logo"><br>
     <br>
     <p ng-if="isEng()">Always a pleasure to offer the best and easiest way to use an expense manager.</p>
     <p ng-if="!isEng()">Mereu o placere in oferirea celei mai placute si usor de folosit aplicatii de management financiar.</p>
   </p>
-  <br><br>
+  <br/><br/>
   <h3 style="font-weight: bold;">What <b>The Accountant</b> does ?</h3>
-  <div>
+  <div class="text-left">
+    <label>Don't ask what The Accountant can do for you, but what you can do for yourself by using this app:</label>
     <ul style="text-align:left;font-size:16px;">
-      <li><b>The Accountant</b> helps you to keep your budget under control.</li>
-      <li><b>The Accountant</b> can calculate how much you've spent monthly,
-        grouping your expenses by categories or by date.</li>
-      <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you establish monthly thresholds for expenses
-        grouped by different categories.</li>-->
-      <li><b>The Accountant</b> is free and easy to use.</li>
-      <li><b>The Accountant</b> offers the possibility to manage your expenses by
-        creating an account that can be used to login into the application everywhere you are, without installing any other
-        application.</li>
-      <li><b>The Accountant</b> offers a secure connection based on HTTPS protocol.</li>
-      <li><b>The Accountant</b> encrypts any information for a user, and only the
-        user that have created the information has acces to it.</li>
+      <li>manage your expenses and incomes in a SECURE way</li>
+      <li>keep track of your budget</li>
+      <li>have detailed statistics (in your own date interval) on your expenses and incomes</li>
+      <li>always know how much you've spent/gained even if you do transactions in different currencies.
+        The Accountant will convert those transactions to your default currency</li>
     </ul>
 
-    <ul ng-if="!isEng()" style="text-align:left;font-size:18px;">
-      <li><b>The Accountant</b> te ajuta sa tii bugetul personal sub control.</li>
-      <li><b>The Accountant</b> poate calcula cat ai cheltuit lunar,
-        grupand cheltuielile in functie de categorie sau de data.</li>
-      <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te poate ajuta sa iti stabilesti limite lunare pentru
-        cheltuielile grupate pe categorii diferite.</li>-->
-      <li><b>The Accountant</b> este gratuit si usor de folosit.</li>
-      <li><b>The Accountant</b> ofera posibilitatea managementului chaltuielilor
-        prin crearea unui cont care poate fi folosit pentru logarea in aplicatie de oriunde ,
-        fara necesitatea instalarii unei alte aplicatii.</li>
-      <li><b>The Accountant</b> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
-      <li><b>The Accountant</b> cripteaza toate informatiile introduse de utlizator, si doar
-        utilizatorul care a introdus informatia va avea acces.</li>
-    </ul>
+    <label>And don't forget, <b>The Accountant</b> is completely free!</label><br/>
+    <label>Check out our Android mobile app, fast and wasy to use &nbsp;&nbsp;<a href="" style="cursor: hand; cursor: pointer;"><img src="images/logo.svg" height="16" width="16"> The Accountant</a></label>
   </div>
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="0"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
-      <!--<li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>-->
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <li data-target="#myCarousel" data-slide-to="6"></li>
+      <li data-target="#myCarousel" data-slide-to="7"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="images/preview_graphics.PNG" alt="Chania">
+        <img src="images/pscreen/1addExpense.PNG" alt="Add Expenses">
       </div>
-
       <div class="item">
-        <img src="images/preview_statistics.PNG" alt="Chania">
+        <img src="images/pscreen/2expenseHistory.PNG" alt="Expenses History">
       </div>
-
-      <!--<div class="item">
-        <img src="img_flower.jpg" alt="Flower">
-      </div>
-
       <div class="item">
-        <img src="img_flower2.jpg" alt="Flower">
-      </div>-->
+        <img src="images/pscreen/3expenseChart.PNG" alt="Expenses Chart">
+      </div>
+      <div class="item">
+        <img src="images/pscreen/4setCategories.PNG" alt="Expenses Categories">
+      </div>
+      <div class="item">
+        <img src="images/pscreen/5addIncome.PNG" alt="Add Income">
+      </div>
+      <div class="item">
+        <img src="images/pscreen/6incomeHistory.PNG" alt="Incomes History">
+      </div>
+      <div class="item">
+        <img src="images/pscreen/7incomesChart.PNG" alt="Incomes Chart">
+      </div>
+      <div class="item">
+        <img src="images/pscreen/8profileStatistics.PNG" alt="User Statistics">
+      </div>
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    </span>
+    <span class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </span>
   </div>
-  <!--<p><a class="btn btn-lg btn-success" ng-init="shouldShowGraphicPreview = true"
-        ng-click="shouldShowGraphicPreview = !shouldShowGraphicPreview">Control expenses!<span class="glyphicon glyphicon-ok"></span></a>
-  </p>
-  <br>
-  <img ng-if="shouldShowGraphicPreview" src="images/preview_graphics.PNG" style="width:100%" alt="I'm Yeoman">
-  <img ng-if="!shouldShowGraphicPreview" src="images/preview_statistics.PNG" style="width:100%" alt="I'm Yeoman">-->
-  <br>
+  <br/>
+  <br/>
+  <div class="text-left">
+    <label>Up next:</label>
+    <ul>
+      <li>loans functionality</li>
+      <li>push notifications</li>
+    </ul>
   </div>
 </div>
