Added privacypolicy.htm + Link to Play Store

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,7 +21,7 @@
     </ul>
 
     <label>And don't forget, <b>The Accountant</b> is completely free!</label><br/>
-    <label>Check out our Android mobile app, fast and wasy to use &nbsp;&nbsp;<a href="" style="cursor: hand; cursor: pointer;"><img src="images/logo.svg" height="16" width="16"> The Accountant</a></label>
+    <label>Check out our Android mobile app, fast and easy to use &nbsp;&nbsp;<a href="https://play.google.com/store/apps/details?id=com.ionicframework.mymoneytracker" style="cursor: hand; cursor: pointer;"><img src="images/logo/20_20_gogleplay.svg"> The Accountant</a></label>
   </div>
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -40,28 +40,28 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="images/pscreen/1addExpense.PNG" alt="Add Expenses">
+        <img src="images/pscreen/1addExpense.png" alt="Add Expenses">
       </div>
       <div class="item">
-        <img src="images/pscreen/2expenseHistory.PNG" alt="Expenses History">
+        <img src="images/pscreen/2expenseHistory.png" alt="Expenses History">
       </div>
       <div class="item">
-        <img src="images/pscreen/3expenseChart.PNG" alt="Expenses Chart">
+        <img src="images/pscreen/3expenseChart.png" alt="Expenses Chart">
       </div>
       <div class="item">
-        <img src="images/pscreen/4setCategories.PNG" alt="Expenses Categories">
+        <img src="images/pscreen/4setCategories.png" alt="Expenses Categories">
       </div>
       <div class="item">
-        <img src="images/pscreen/5addIncome.PNG" alt="Add Income">
+        <img src="images/pscreen/5addIncome.png" alt="Add Income">
       </div>
       <div class="item">
-        <img src="images/pscreen/6incomeHistory.PNG" alt="Incomes History">
+        <img src="images/pscreen/6incomeHistory.png" alt="Incomes History">
       </div>
       <div class="item">
-        <img src="images/pscreen/7incomesChart.PNG" alt="Incomes Chart">
+        <img src="images/pscreen/7incomesChart.png" alt="Incomes Chart">
       </div>
       <div class="item">
-        <img src="images/pscreen/8profileStatistics.PNG" alt="User Statistics">
+        <img src="images/pscreen/8profileStatistics.png" alt="User Statistics">
       </div>
     </div>
 
@@ -82,6 +82,7 @@
     <ul>
       <li>loans functionality</li>
       <li>push notifications</li>
+      <li>receipt scanning</li>
     </ul>
   </div>
 </div>
