--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -192,3 +192,10 @@ h3 {
 .carousel-caption {
   color: black !important;
 }
+
+.bordered-info {
+  border: 1px solid;
+  margin: 5px;
+  padding: 12px 2px 4px 2px;
+  border-radius: 5px;
+}
