--- a/app/views/modal/edit-income-popup.html
+++ b/app/views/modal/edit-income-popup.html
@@ -12,7 +12,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="description">Description:</label>
       <div class="col-sm-9">
-        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="income.description"/>
+        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="income.description"></textarea>
       </div>
     </div>
     <div class="form-group">
