--- a/app/views/expense/expenses_history.html
+++ b/app/views/expense/expenses_history.html
@@ -84,8 +84,8 @@
               ng-click="deleteExpense(expense)"></span>
       </td>
     </tr>
-    <tr ng-show="expenses.length == 0">
-      <td style="font-style:italic;" colspan="5">No expense have been found!</td>
+    <tr class="text-center" ng-show="expenses.length == 0">
+      <td style="font-style:italic;" colspan="7">No expense have been found!</td>
     </tr>
     </tbody>
   </table>
