--- a/app/views/loans/add_loan.html
+++ b/app/views/loans/add_loan.html
@@ -1,5 +1,5 @@
 <div class="container sign-up-container">
-  <h3 style="text-align:center;"><img src="images/add_loan.svg" width="90px"> ADD LOAN</h3>
+  <h3 style="text-align:center;"><img src="images/add_loan.svg" width="90px"> {{isEditMode ? 'UPDATE' : 'ADD'}} LOAN</h3>
   <br/>
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
@@ -92,7 +92,9 @@
 
     <div class="form-group" style="">
       <div class="col-sm-offset-3 col-sm-3">
-        <button type="submit" class="btn accountant-btn"><span class="glyphicon glyphicon-plus"></span> Add loan</button>
+        <button type="submit" class="btn accountant-btn">
+          <span class="glyphicon glyphicon-plus"></span> {{isEditMode ? 'Update' : 'Add'}} loan
+        </button>
       </div>
       <div class="col-sm-6"></div>
     </div>
