--- a/app/views/user/payment.html
+++ b/app/views/user/payment.html
@@ -55,7 +55,7 @@
       </div>
       <div class="col-md-12">
         <label>
-          We hope you enjoy using our application. For any inconvenience you can contact us at <i><a href="mailto:feedback.theacctnt@gmail.com">feedback.theacctnt@gmail.com</a>.</i>
+          We hope you enjoy using our application. For any inconvenience you can contact us at <i><a href="mailto:feedback.theacctnt@gmail.com">help.theacctnt@gmail.com</a>.</i>
         </label>
       </div>
       <div class="col-sm-offset-11 col-sm-1">&nbsp;</div>
