Loans, Notifications and Category Limit - Restricted only for contributors

--- a/app/views/loans/add_loan.html
+++ b/app/views/loans/add_loan.html
@@ -40,7 +40,7 @@
     <div class="form-group">
       <label class="control-label col-sm-3" for="amount">Amount:</label>
       <div class="col-sm-6">
-        <input type="number" class="form-control" id="amount" placeholder="Loan amount" ng-model="loan.amount" required >
+        <input type="number" step="any" class="form-control" id="amount" placeholder="Loan amount" ng-model="loan.amount" required >
       </div>
       <div class="col-sm-3">
         <select type="string" class="form-control" id="currency" placeholder="Currency" ng-model="loan.currency" required>
