--- a/app/views/modal/edit-expense-popup.html
+++ b/app/views/modal/edit-expense-popup.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Category:</label>
+      <label class="control-label col-sm-2" for="category">Category:</label>
       <div class="col-sm-4">
         <select type="date" class="form-control" id="category" placeholder="Category" ng-model="expense.category.name" required>
           <option ng-repeat="category in categories" value="{{category}}" required>{{category}}</option>
@@ -28,7 +28,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="description">Description:</label>
       <div class="col-sm-9">
-        <textarea type="text" rows="5"  class="form-control" id="description" placeholder="Description ..." ng-model="expense.description"></textarea>
+        <textarea type="text" rows="3"  class="form-control" id="description" placeholder="Description ..." ng-model="expense.description"></textarea>
       </div>
     </div>
     <div class="form-group">
